<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TipCalc</string>
    <string name="action_settings">Settings</string>
    
    <string name="num1">1</string>
    <string name="num2">2</string>
    <string name="num3">3</string>
    <string name="num4">4</string>
    <string name="num5">5</string>
    <string name="num6">6</string>
    <string name="num7">7</string>
    <string name="num8">8</string>
    <string name="num9">9</string>
    <string name="num0">0</string>
    <string name="clear">Clear</string>
    <string name="undo">Undo</string>
    
    <string name="percent_header">%</string>
    <string name="tip_header">Tip</string>
    <string name="total_header">Total</string>
    <string name="percent15">15%:</string>
    <string name="percent20">20%:</string>
    
    <string name="settingsTipCategory">Tip Settings</string>
    
    <string name="settingsRoundTitle">Show round totals</string>
    <string name="settingsRoundSummary">Show tips result in a round dollar total amount. \nNOTE: This may cause performance issues for large amounts or wide percent ranges.</string>
    
    <string name="settingsMinTitle">Minimum Tip</string>
    <string name="settingsMinSummary">The minimum percentage value to show.</string>
    
    <string name="settingsMaxTitle">Maximum Tip</string>
    <string name="settingsMaxSummary">The maximum percentage value to show.</string>

</resources>
