<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/text_display"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:gravity="right"
        android:maxLines="1"
        android:textSize="32sp"
        android:typeface="monospace" />
    
    <Button android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/num2"
        android:onClick="InsertText"
        android:layout_below="@id/text_display"
        android:layout_centerHorizontal="true" />
        
    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_display"
        android:layout_toLeftOf="@id/button2"
        android:onClick="InsertText"
        android:text="@string/num1" />
    
    <Button android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/num3"
        android:onClick="InsertText"
        android:layout_below="@id/text_display"
        android:layout_toRightOf="@id/button2" />
    
    <Button android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/num5"
        android:onClick="InsertText"
        android:layout_below="@id/button1"
        android:layout_centerHorizontal="true" />
    
    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@id/button5"
        android:layout_below="@id/button1"
        android:onClick="InsertText"
        android:text="@string/num4" />
        
    <Button android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/num6"
        android:onClick="InsertText"
        android:layout_below="@id/button1"
        android:layout_toRightOf="@id/button5" />
    
    <Button android:id="@+id/button8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/num8"
        android:onClick="InsertText"
        android:layout_below="@id/button4"
        android:layout_centerHorizontal="true" />
    
    <Button
        android:id="@+id/button7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button5"
        android:layout_toLeftOf="@id/button5"
        android:onClick="InsertText"
        android:text="@string/num7" />
        
    <Button android:id="@+id/button9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/num9"
        android:onClick="InsertText"
        android:layout_below="@id/button4"
        android:layout_toRightOf="@id/button8" />

     <Button android:id="@+id/button0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/num0"
        android:onClick="InsertText"
        android:layout_below="@id/button7"
        android:layout_centerHorizontal="true" />
     
    <Button
        android:id="@+id/buttonUndo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button7"
        android:layout_toLeftOf="@id/button0"
        android:onClick="UndoText"
        android:text="@string/undo" />
    
    <Button
        android:id="@+id/buttonClear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button7"
        android:layout_toRightOf="@id/button0"
        android:onClick="ClearText"
        android:text="@string/clear" />

	<TableLayout  
	    android:id="@+id/tableLayout1"  
	    android:layout_width="match_parent"  
	    android:layout_height="match_parent" 
	    android:layout_below="@id/button0" 
	    android:shrinkColumns="*"  
	    android:stretchColumns="*">  
	    <TableRow
	        android:id="@+id/tableRow1"  
	        android:layout_height="wrap_content"  
	        android:layout_width="match_parent"  
	        android:gravity="center_horizontal" >
	        <TextView  
	            android:id="@+id/percent15"  
	            android:layout_width="match_parent"  
	            android:layout_height="wrap_content"   
	            android:textSize="32sp"  
	            android:text="@string/percent15"  
	            android:gravity="right" >
	        </TextView>  
	       	<TextView  
	            android:id="@+id/tip15"  
	            android:layout_width="match_parent"  
	            android:layout_height="wrap_content"   
	            android:textSize="32sp"   
	            android:gravity="center" >
	        </TextView> 
	       	<TextView  
	            android:id="@+id/sum15"  
	            android:layout_width="match_parent"  
	            android:layout_height="wrap_content"   
	            android:textSize="32sp"   
	            android:gravity="left" >
	        </TextView> 
	    </TableRow>
	   	<TableRow
	        android:id="@+id/tableRow2"  
	        android:layout_height="wrap_content"  
	        android:layout_width="match_parent"  
	        android:gravity="center_horizontal">  
	        <TextView  
	            android:id="@+id/percent20"  
	            android:layout_width="match_parent"  
	            android:layout_height="wrap_content"   
	            android:textSize="32sp"  
	            android:text="@string/percent20"  
	            android:gravity="right" >
	        </TextView>  
	       	<TextView  
	            android:id="@+id/tip20"  
	            android:layout_width="match_parent"  
	            android:layout_height="wrap_content"   
	            android:textSize="32sp"   
	            android:gravity="center" >
	        </TextView> 
	       	<TextView  
	            android:id="@+id/sum20"  
	            android:layout_width="match_parent"  
	            android:layout_height="wrap_content"   
	            android:textSize="32sp"   
	            android:gravity="left" >
	        </TextView> 
	    </TableRow>
	</TableLayout>  

</RelativeLayout>