<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/calculator"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
    <TableRow    	
        android:layout_height="0dp"  
        android:layout_weight="1"
	    android:layout_width="match_parent"
	    style="?android:attr/buttonBarStyle">
        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/button1"
            android:layout_weight="1"
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:text="@string/num1"
	        android:textSize="@dimen/numpad_text_size"
	        android:background="@drawable/numpad_button" />
        <Button 
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/button2"
            android:layout_weight="1"
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:text="@string/num2"
	        android:textSize="@dimen/numpad_text_size"
	        android:background="@drawable/numpad_button" />
        <Button 
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/button3"
            android:layout_weight="1"
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:text="@string/num3"
	        android:textSize="@dimen/numpad_text_size"
	        android:background="@drawable/numpad_button" />
    </TableRow>
    
    <TableRow 	   	
        android:layout_height="0dp"  
        android:layout_weight="1" 
	    android:layout_width="match_parent"
	    style="?android:attr/buttonBarStyle">
        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/button4"
            android:layout_weight="1"
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:text="@string/num4"
	        android:textSize="@dimen/numpad_text_size"
	        android:background="@drawable/numpad_button" />
        <Button 
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/button5"
            android:layout_weight="1"
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:text="@string/num5"
	        android:textSize="@dimen/numpad_text_size"
	        android:background="@drawable/numpad_button" />
        <Button 
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/button6"
            android:layout_weight="1"
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:text="@string/num6"
	        android:textSize="@dimen/numpad_text_size"
	        android:background="@drawable/numpad_button" />
    </TableRow>
    
    <TableRow 	   	
        android:layout_height="0dp"  
        android:layout_weight="1"  
	    android:layout_width="match_parent"
	    style="?android:attr/buttonBarStyle">
        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/button7"
            android:layout_weight="1"
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:text="@string/num7"
	        android:textSize="@dimen/numpad_text_size"
	        android:background="@drawable/numpad_button" />
        <Button 
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/button8"
            android:layout_weight="1"
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:text="@string/num8"
	        android:textSize="@dimen/numpad_text_size"
	        android:background="@drawable/numpad_button" />
        <Button 
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/button9"
            android:layout_weight="1"
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:text="@string/num9"
	        android:textSize="@dimen/numpad_text_size"
	        android:background="@drawable/numpad_button" />
    </TableRow>
    
    <TableRow 	   	
        android:layout_height="0dp"  
        android:layout_weight="1" 
	    android:layout_width="match_parent"
	    style="?android:attr/buttonBarStyle">
         <Button 
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/button0"
            android:layout_weight="1"
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:text="@string/num0"
	        android:textSize="@dimen/numpad_text_size"
	        android:background="@drawable/numpad_button" />
	     
	    <Button
	        style="?android:attr/buttonBarButtonStyle"
	        android:id="@+id/buttonUndo"
            android:layout_weight="1"
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:text="@string/undo"
	        android:textSize="@dimen/numpad_text_size"
	        android:background="@drawable/numpad_button" />
	    
	    <Button
	        style="?android:attr/buttonBarButtonStyle"
	        android:id="@+id/buttonClear"
            android:layout_weight="1"
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:text="@string/clear"
	        android:textSize="@dimen/numpad_text_size"
	        android:background="@drawable/numpad_button" />
    </TableRow>


</TableLayout>